<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:background="@drawable/login_background"
    >

    <TableLayout
        android:id="@+id/tl_results"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:stretchColumns="*"
        >
        <TableRow
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            >
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                style="@style/TableRowTitle"
                android:text="@string/pos"
                tools:text="@string/pos"
                />
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                style="@style/TableRowTitle"
                android:text="@string/altitude"
                tools:text="@string/altitude"
                />
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                style="@style/TableRowTitle"
                android:text="@string/left_kl"
                tools:text="@string/left_kl"
                />
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                style="@style/TableRowTitle"
                android:text="@string/right_kl"
                tools:text="@string/right_kl"
                />
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                style="@style/TableRowTitle"
                android:text="@string/average_klkr"
                tools:text="@string/average_klkr"
                />
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                style="@style/TableRowTitle"
                android:text="@string/shift"
                tools:text="@string/shift"
                />

        </TableRow>
        <View
            android:layout_width="match_parent"
            android:layout_height="2dp"
            android:background="@color/color_gray"
            />

    </TableLayout>

    <TableLayout
        android:id="@+id/tl_xoy_results"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:stretchColumns="*"
        android:visibility="gone"
        tools:visibility="visible"
        >
        <TableRow
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            >
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                style="@style/TableRowTitle"
                android:text="@string/pos"
                tools:text="@string/pos"
                />
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                style="@style/TableRowTitle"
                android:text="@string/altitude"
                tools:text="@string/altitude"
                />
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                style="@style/TableRowTitle"
                android:text="@string/by_x"
                tools:text="@string/by_x"
                />
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                style="@style/TableRowTitle"
                android:text="@string/by_y"
                tools:text="@string/by_y"
                />
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                style="@style/TableRowTitle"
                android:text="@string/counted"
                tools:text="@string/counted"
                />

        </TableRow>
        <View
            android:layout_width="match_parent"
            android:layout_height="2dp"
            android:background="@color/color_gray"
            />

    </TableLayout>
</LinearLayout>