<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    tools:context=".ui.fragments.NavReportFragment"
    android:orientation="vertical"
    android:background="@drawable/login_background"
    >

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@id/cl_graphs"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:clickable="true"
        android:background="@drawable/item_mc_background"
        android:layout_margin="12dp"
        >

        <androidx.appcompat.widget.AppCompatImageView
            android:id="@id/iv_graph_icon"
            style="@style/ImageReport"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintBottom_toBottomOf="parent"
            android:src="@drawable/graphic"
            android:background="@drawable/icon_bgd"
            />
        <TextView
            android:id="@id/tv_graphic_title"
            style="@style/TitleReport"
            android:fontFamily="@font/local_titles"
            app:layout_constraintStart_toEndOf="@id/iv_graph_icon"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            android:text="@string/graphs_title"
            tools:text="@string/graphs_title"
            />

        <TextView
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            android:layout_marginStart="6dp"
            android:layout_marginEnd="6dp"
            app:layout_constraintStart_toEndOf="@id/iv_graph_icon"
            app:layout_constraintTop_toBottomOf="@id/tv_graphic_title"
            app:layout_constraintEnd_toEndOf="parent"
            android:textAlignment="center"
            android:gravity="center"
            android:text="@string/graphs_description"
            tools:text="@string/graphs_description"
            />

    </androidx.constraintlayout.widget.ConstraintLayout>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@id/cl_tables"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@drawable/item_mc_background"
        android:layout_margin="12dp"
        >

        <androidx.appcompat.widget.AppCompatImageView
            android:id="@id/iv_table_icon"
            style="@style/ImageReport"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintBottom_toBottomOf="parent"
            android:src="@drawable/table"
            android:background="@drawable/icon_bgd"
            />
        <TextView
            android:id="@id/tv_table_title"
            style="@style/TitleReport"
            android:fontFamily="@font/local_titles"
            app:layout_constraintStart_toEndOf="@id/iv_table_icon"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            android:text="@string/tables_title"
            tools:text="@string/tables_title"
            />

        <TextView
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            android:layout_marginStart="6dp"
            android:layout_marginEnd="6dp"
            app:layout_constraintStart_toEndOf="@id/iv_table_icon"
            app:layout_constraintTop_toBottomOf="@id/tv_table_title"
            app:layout_constraintEnd_toEndOf="parent"
            android:textAlignment="center"
            android:gravity="center"
            android:text="@string/tables_description"
            tools:text="@string/tables_description"
            />

    </androidx.constraintlayout.widget.ConstraintLayout>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@id/cl_report"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@drawable/item_mc_background"
        android:layout_margin="12dp"
        >

        <androidx.appcompat.widget.AppCompatImageView
            android:id="@id/iv_report_icon"
            style="@style/ImageReport"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintBottom_toBottomOf="parent"
            android:src="@drawable/report2"
            android:background="@drawable/icon_bgd"
            />
        <TextView
            android:id="@id/tv_report_title"
           style="@style/TitleReport"
            android:fontFamily="@font/local_titles"
            app:layout_constraintStart_toEndOf="@id/iv_report_icon"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            android:text="@string/report_title"
            tools:text="@string/report_title"
            />

        <TextView
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            android:layout_marginStart="6dp"
            android:layout_marginEnd="6dp"
            app:layout_constraintStart_toEndOf="@id/iv_report_icon"
            app:layout_constraintTop_toBottomOf="@id/tv_report_title"
            app:layout_constraintEnd_toEndOf="parent"
            android:textAlignment="center"
            android:gravity="center"
            android:text="@string/report_description"
            tools:text="@string/report_description"
            />

    </androidx.constraintlayout.widget.ConstraintLayout>

</LinearLayout>